fix: .title p text-overflow: ellipsis

--- a/index.sass
+++ b/index.sass
@@ -90,11 +90,14 @@ main
             color: #DBDE94
             text-transform: uppercase
         p
+            display: inline
             margin-bottom: 8px
             font-size: 14px           
             line-height: 1.9em
             color: #FFFFFF
             @include rwd-sm
+                display: inline-block
+                width: 90%
                 text-overflow: ellipsis
                 white-space: nowrap
                 overflow: hidden
@@ -103,6 +106,8 @@ main
             font-size: 20px
             color: #7F9397
             background-color: #fff
+            @include rwd-sm
+                vertical-align: top
     .service
         .menu
             padding: 18px
